add: miyunsi bot mode